--- a/frontend/src/Widgets/Style.css
+++ b/frontend/src/Widgets/Style.css
@@ -1,11 +1,61 @@
 .drapeau img{
 	height: 150px;
 	width: 150px;
+	
 }
 .drapeau {
 	font-size: 1em;
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(180, 202, 228);
+	border-radius: 0%;
+	margin-bottom: 20px;
+	width: 30%;
+	height: 30%;
+	margin-left: 100px;
 }
 .date{
 	text-align: center;
 	font-size: 1.3em;
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(135, 151, 238);
+	font-size: 1.3em;
+	width: 10em;
+}
+
+.heure{
+	text-align: center;
+	font-size: 1.3em;
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(154, 161, 226);
+	font-size: 1.3em;
+	width: 10em;
+}
+
+.barre{
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(145, 177, 224);
+	width: 500px;
+	margin-bottom: 20px;
+	border-radius: 0%;
+	font-size: 1.3em;
+	padding-left: 105px;
+	text-align: center;
+}
+
+.radial{
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(145, 177, 224);
+	width: 500px;
+	margin-bottom: 20px;
+}
+
+.percent{
+	box-shadow:1px 1px 3px #999;
+	background-color: rgb(179, 191, 211);
+	width: 500px;
+	margin-bottom: 20px;
+}
+
+.page{
+	background-color: rgb(233, 230, 230);
 }
