--- a/frontend/src/Widgets/BarChart/BarChart.css
+++ b/frontend/src/Widgets/BarChart/BarChart.css
@@ -1,8 +1,7 @@
 .bar{
     background-color: rgb(86, 135, 209);
-    width: 35em;
     margin-top: 2em;
-    margin-left: 2px;
+    margin-right: 65px;
     box-shadow:1px 1px 3px rgba(202, 170, 170, 0.445);
     border-radius: 0.5em;
 }
