--- a/frontend/src/Widgets/BarChart/BarChart.css
+++ b/frontend/src/Widgets/BarChart/BarChart.css
@@ -1,5 +1,5 @@
 .bar{
-    background-color: rgb(86, 135, 209);
+    background-color: #f8f9f9;
     margin-top: 2em;
     margin-right: 65px;
     box-shadow:1px 1px 3px rgba(202, 170, 170, 0.445);
