--- a/frontend/src/Widgets/Heure/Heure.css
+++ b/frontend/src/Widgets/Heure/Heure.css
@@ -1,12 +1,6 @@
 .heure{
-    background-color: rgb(204, 192, 250);
-    width: 10em;
-    margin-top: 2em;
+    background-color: #f8f9f9;
+    margin-top: 1em;
     box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
-
-    text-align: center;
-    font:1em Arial;
-    font-weight: bolder;
-    color: whitesmoke;
 }
