--- a/frontend/src/Widgets/Humidite/Humidite.css
+++ b/frontend/src/Widgets/Humidite/Humidite.css
@@ -1,13 +1,8 @@
-.icon_humidite img {
-	height: 90px;
-}
 .humidite{
-	background-color: rgb(215, 201, 248);
-	box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
+    background-color: #f8f9f9;
+	box-shadow:1px 1px 3px rgba(73, 72, 72, 0.445);
 	border-radius: 0.5em;
 	text-align: center;
-	text-align: center;
 	font-weight: bolder;
-	color: whitesmoke;
-
+    padding-bottom: 1em;
 }
