--- a/frontend/src/Formulaire/Formulaire.css
+++ b/frontend/src/Formulaire/Formulaire.css
@@ -1,7 +1,20 @@
 .formulaire{
-    width: 30em;
-    margin-top: 2em;
-    margin-left: 2em;
+
     background:linear-gradient(rgba(240, 236, 236, 0.979),transparent);
     background-color:rgb(211, 22, 116);
+}
+
+.nom{
+     	margin-left: 1.2em;
+	margin-right: 1em;
+}
+
+
+.prenom{
+	margin-left: 1.2em;
+	margin-right: 1em;
+}
+.bouton{
+		margin-left: 2em;
+
 }
