--- a/frontend/src/Widgets/LineChart/LineChart.css
+++ b/frontend/src/Widgets/LineChart/LineChart.css
@@ -1,6 +1,5 @@
 .line{
-    background-color: rgb(184, 211, 252);
-    width: 15em;
+    background-color: #f8f9f9;
     margin-top: 2em;
     box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
@@ -10,5 +9,5 @@
     text-align: center;
     font:1em Arial;
     font-weight: bolder;
-    color: whitesmoke;
+    color: rgb(7, 13, 99);
 }
