--- a/frontend/src/Widgets/UserProfil/UserProfil.css
+++ b/frontend/src/Widgets/UserProfil/UserProfil.css
@@ -1,18 +1,18 @@
 .profil{
-        background-color: rgb(215, 201, 248);
-
+    background-color: #f8f9f9;
         box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
         border-radius: 0.5em;
         text-align: center;
         text-align: center;
         font:1em Arial;
         font-weight: bolder;
-        color: whitesmoke;
+        margin-top: 2em;
+        margin-left: 2em;
 }
 
 
 .userAvatar{
-    width: 20em;
+    width: 18.7em;
     height: 15em;
     border-radius: 0.25em;
 }
