--- a/frontend/src/Widgets/BarChart/BarChart.css
+++ b/frontend/src/Widgets/BarChart/BarChart.css
@@ -1,7 +1,19 @@
-.bar{
-    background-color: #f8f9f9;
+.barChart {
+    background-color: rgb(240, 239, 241);
     margin-top: 2em;
-    margin-right: 65px;
-    box-shadow:1px 1px 3px rgba(202, 170, 170, 0.445);
+    margin-left:8.5em;
+    box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
+    font-family: 'Times New Roman', sans-serif;
+    color: #000000;
+    font-size: 1em;
+}
+
+@media (max-width: 768px) {
+    .barChart {
+        margin-top: 1em;
+        margin-bottom: 1em;
+        margin-right:1em;
+        margin-left:1em;
+    }
 }
