--- a/frontend/src/Widgets/Heure/Heure.css
+++ b/frontend/src/Widgets/Heure/Heure.css
@@ -1,6 +1,22 @@
-.heure{
-    background-color: #f8f9f9;
-    margin-top: 1em;
-    box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
+.heure {
+    background-color: rgb(240, 239, 241);
+    box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
+    font-family: 'Times New Roman', sans-serif;
+    color: #000000;
+    font-size: 1em;
+    text-align:center;
+    padding-bottom:1em;
+}
+.horloge{
+    text-align:center;
+}
+
+@media (max-width: 768px) {
+    .heure {
+        margin-right: 5em;
+        margin-left: 5em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
 }
