--- a/frontend/src/Widgets/Humidite/Humidite.css
+++ b/frontend/src/Widgets/Humidite/Humidite.css
@@ -1,8 +1,18 @@
-.humidite{
-    background-color: #f8f9f9;
-	box-shadow:1px 1px 3px rgba(73, 72, 72, 0.445);
-	border-radius: 0.5em;
-	text-align: center;
-	font-weight: bolder;
+.humidite {
+    background-color: rgb(240, 239, 241);
+    box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
+    border-radius: 0.5em;
+    text-align: center;
     padding-bottom: 1em;
+    font-family: 'Times New Roman', sans-serif;
+    color: #000000;
+    font-size: 1em;
+}
+@media (max-width: 768px) {
+    .humidite {
+        margin-right: 5em;
+        margin-left: 5em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
 }
