--- a/frontend/src/Widgets/LineChart/LineChart.css
+++ b/frontend/src/Widgets/LineChart/LineChart.css
@@ -1,13 +1,23 @@
-.line{
-    background-color: #f8f9f9;
+.line {
+    background-color: rgb(240, 239, 241);
     margin-top: 2em;
-    box-shadow:1px 1px 3px rgba(153, 153, 153, 0.445);
+    box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
 }
 
-.titre{
+
+.titre {
     text-align: center;
-    font:1em Arial;
-    font-weight: bolder;
-    color: rgb(7, 13, 99);
+    font-family: 'Times New Roman', sans-serif;
+    color: #000000;
+    font-size: 1em;
+}
+
+@media (max-width: 768px) {
+    .line {
+        margin-right: 1em;
+        margin-left: 1em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
 }
