--- a/frontend/src/Accueil.css
+++ b/frontend/src/Accueil.css
@@ -1,7 +1,5 @@
-.Accueil{
-    background:linear-gradient(rgba(10, 10, 10, 0.979),transparent);
-    background-color:rgb(16, 103, 233)
-}
+
 .container-fluid {
-    background-color: #FDFBFB;
+    background:linear-gradient(rgba(10, 10, 10, 0.979),transparent);
+    background-color:rgb(16, 103, 233);
 }
