--- a/frontend/src/Widgets/LineChart/LineChart.css
+++ b/frontend/src/Widgets/LineChart/LineChart.css
@@ -1,6 +1,6 @@
 .line {
     background-color: rgb(240, 239, 241);
-    margin-top: 2em;
+    margin-top: 1em;
     box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
 }
@@ -8,7 +8,7 @@
 
 .titre {
     text-align: center;
-    font-family: 'Times New Roman', sans-serif;
+    font-family: Verdana, sans-serif;
     color: #000000;
     font-size: 1em;
 }
@@ -20,4 +20,21 @@
         margin-top: 1em;
         margin-bottom: 1em;
     }
+}
+.line:hover{
+    background-color: #79c8fd;
+    -moz-transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+}
+
+.test{
+    margin-left: 1.5em;
+    font-size: 20px;
 }
