--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
-.navbar-header {
-    background-color: red;
+.navbar1{
+    background-color: rgb(8, 8, 7);
+    color: royalblue;
+    width: 100%;
 }
