--- a/frontend/src/Widgets/AirPollution/AirPollution.css
+++ b/frontend/src/Widgets/AirPollution/AirPollution.css
@@ -7,9 +7,7 @@
     border-radius: 0.5em;
     text-align: center;
     margin-top: 2em;
-    padding-top: 1em;
-    padding-bottom: 0.5em;
-    font-family: 'Times New Roman', sans-serif;
+    font-family: Verdana, sans-serif;
     color: #000000;
     font-size: 1em;
 }
@@ -26,4 +24,17 @@
 
 .num_pollution{
     padding-top:1.1em;
+}
+
+.airpollution:hover{
+    background-color: #79c8fd;
+    -moz-transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
 }
