--- a/frontend/src/Widgets/BarChart/BarChart.css
+++ b/frontend/src/Widgets/BarChart/BarChart.css
@@ -1,19 +1,35 @@
-.barChart {
+.barchart {
     background-color: rgb(240, 239, 241);
-    margin-top: 2em;
-    margin-left:8.5em;
     box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
     font-family: 'Times New Roman', sans-serif;
     color: #000000;
     font-size: 1em;
+    box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
+    border-radius: 0.5em;
+    margin-top: 2em;
+    margin-right: 2em;
+    margin-left: 2em;
 }
 
 @media (max-width: 768px) {
-    .barChart {
+    .barchart {
         margin-top: 1em;
-        margin-bottom: 1em;
+        margin-bottom:1em;
         margin-right:1em;
         margin-left:1em;
     }
+}
+
+.barchart:hover{
+    background-color: #79c8fd;
+    -moz-transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
 }
