--- a/frontend/src/Widgets/Humidite/Humidite.css
+++ b/frontend/src/Widgets/Humidite/Humidite.css
@@ -3,8 +3,8 @@
     box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
     text-align: center;
-    padding-bottom: 1em;
-    font-family: 'Times New Roman', sans-serif;
+    padding-bottom: 0.5em;
+    font-family: Verdana, sans-serif;
     color: #000000;
     font-size: 1em;
 }
@@ -15,4 +15,17 @@
         margin-top: 1em;
         margin-bottom: 1em;
     }
+}
+
+.humidite:hover{
+    background-color: #79c8fd;
+    -moz-transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
 }
