--- a/frontend/src/Widgets/UserProfil/UserProfil.css
+++ b/frontend/src/Widgets/UserProfil/UserProfil.css
@@ -4,9 +4,9 @@
     border-radius: 0.5em;
     text-align: center;
     padding-bottom: 1.9em;
-    margin-top: 5em;
+    margin-top: 2em;
     margin-left: 5em;
-    font-family: 'Times New Roman', sans-serif;
+    font-family: Verdana, sans-serif;
     color: #000000;
     font-size: 1em;
 }
@@ -24,4 +24,17 @@
 .photo img{
     width: 100%;
     border-radius: 0.25em;
+}
+
+.profil:hover{
+    background-color: #79c8fd;
+    -moz-transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
 }
