--- a/frontend/src/Widgets/Humidite/Humidite.css
+++ b/frontend/src/Widgets/Humidite/Humidite.css
@@ -17,6 +17,12 @@
     }
 }
 
+.progress {
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+}
+
+
 .humidite:hover{
     background-color: #79c8fd;
     -moz-transition: all 0.8s;
