--- a/frontend/src/Widgets/LineChart/LineChart.css
+++ b/frontend/src/Widgets/LineChart/LineChart.css
@@ -1,6 +1,7 @@
 .line {
     background-color: rgb(240, 239, 241);
     margin-top: 1em;
+    padding-bottom: 1em;
     box-shadow: 2px 2px 2px rgba(153, 153, 153, 0.445);
     border-radius: 0.5em;
 }
