--- a/frontend/src/Formulaire/Formulaire.css
+++ b/frontend/src/Formulaire/Formulaire.css
@@ -1,13 +1,15 @@
 .formulaire {
     margin-right: 3em;
+    height: 30em;
 }
 .container-fluid {
     background-color: #FDFBFB;
+    color: white;
 }
 
 .nom{
-     	margin-left: 1.2em;
-	margin-right: 1em;
+    margin-left: 1.2em;
+	margin-right: 2em;
 }
 
 
@@ -20,7 +22,7 @@
 
 .prenom{
 	margin-left: 1.2em;
-	margin-right: 1em;
+    margin-right: 2em;
 }
 @media (max-width: 768px) {
     .prenom {
@@ -29,7 +31,7 @@
 }
 
 .bouton{
-		margin-left: 2em;
+	margin-left: 2em;
 
 }
 .test {
